--- a/views/categories/authors.ejs
+++ b/views/categories/authors.ejs
@@ -8,16 +8,16 @@
     <div class="content">
       <h2 class="page-title">All Authors</h2>
       <div class="content-box">
-        <%# if (blogs.length > 0) { for (var i = 0; i < blogs.length; i++ ) { %>
+        <% if (authors.length > 0) { for (var i = 0; i < authors.length; i++ ) { %>
           <div class="author-container">
             <a class="author" href="#">
-              <%#= blogs[i].author %>
+              <%= authors[i].name %>
             </a>
           </div>
-          <%# } %>
-          <%# } else { %>
+          <% } %>
+          <% } else { %>
             <p>There are no authors to display.</p>
-          <%# } %>
+          <% } %>
       </div>
     </div>
   </body>
