createNewAuthor Function has been added and it writes to the author-data json file successfully.

--- a/views/blogs/create.ejs
+++ b/views/blogs/create.ejs
@@ -86,7 +86,7 @@
           <div class="form-row"></div>
         </div>
           <div class="blog-content">
-            <textarea id="blogContent" name="blogContent" required="required">
+            <textarea id="blogContent" name="blogContent" >
             </textarea>
           </div>
           <div class="form-button">
