when a new blog is posted the authorList gets updated with the books written by that author

--- a/views/blogs/details.ejs
+++ b/views/blogs/details.ejs
@@ -9,9 +9,10 @@
       <div class="content-box">
         <div class="content-box-top">
           <div class="content-box-heading">
-              <h1 class="title"><%= blog.bookTitle %></h1>
-              </a>
-            <h2 class="author"><%= blog.author %></h2>
+            <h1 class="title"><%= blog.bookTitle %></h1>
+            <a class="authorLink" href="/categories/<%= blog.author %>">
+              <h2 class="author"><%= blog.author %></h2>
+            </a>  
           </div>
           <div class="edit-button-container">
             <a class="edit" href="/blogs/edit/<%= blog.id %>">
