--- a/views/blogs/index.ejs
+++ b/views/blogs/index.ejs
@@ -14,7 +14,11 @@
             <a class="title" href="/blogs/<%= blogs[i].id %>">
               <h1 class="title"><%= blogs[i].bookTitle %></h1>
             </a>
-            <h3 class="author">by <%= blogs[i].author %></h3>
+            <h3 class="author">by
+              <a class="authorLink" href="/categories/<%= blogs[i].author %>">
+                <%= blogs[i].author %>
+              </a>
+              </h3>
             <div class="edit-button-container">
               <a class="edit" href="/blogs/edit/<%= blogs[i].id %>">
                 <img 
