--- a/views/categories/authorDetails.ejs
+++ b/views/categories/authorDetails.ejs
@@ -19,7 +19,9 @@
               />
             </a>
           </div> -->
-
+        </div>
+        <div>
+          <h3>Books Written: <%= author.booksWritten %></h3>
         </div>
       </div>
     </div>  
