--- a/views/categories/authorDetails.ejs
+++ b/views/categories/authorDetails.ejs
@@ -21,9 +21,27 @@
           </div> -->
         </div>
         <div>
-          <h3>Books Written: <%= author.booksWritten %></h3>
+          <h3>Books Written: </h3>
+
+            <% const booksArray = author.booksWritten; %>
+
+            <% if (booksArray.length > 0) { %>
+              <% for (var i = 0; i < booksArray.length; i++ ) { %> 
+              <p> 
+                <% blogs.forEach(blog => { %>
+                  <% if ( blog.bookTitle == booksArray[i]) { %>
+                    <a class="bookLink" href="/blogs/<%= blog.id %>  ">
+                      <%= booksArray[i] %> 
+                    </a>
+                  <% } %>
+                <% }) %>
+            </p>
+            <% }%>
+            <% } else { %>
+              <p>There are no blogs to display.</p>
+            <% } %>
         </div>
       </div>
-    </div>  
+    </div> 
   </body>
 </html> 
