deleted excess files like, test-data.json, template folder, and ejs pages not being used. refactored the startup promises into one promise. rebuilt the create author & blog functions into one. restructed the  blog & author classes. removed extra class properties that are not yet implemented

--- a/views/blogs/create.ejs
+++ b/views/blogs/create.ejs
@@ -16,13 +16,13 @@
           <div class="form-row col-two">
             <label for="author" class="label">Author</label>
           </div>
-
+<!-- change value back to placeholder below! -->
           <div class="form-row col-one">
             <input
             id="bookTitle"
             name="bookTitle"
             type="text"
-            placeholder="Books, books, books..."
+            placeholder="Books, books, book..."
             required="required"
             />
           </div>
@@ -36,7 +36,7 @@
             />
           </div>
 <!-- TO DO: change date input value to show current date -->
-          <div class="form-row col-one">
+          <!-- <div class="form-row col-one">
             <label for="startDate" class="label">Started: </label>
           </div>
           <div class="form-row col-two">
@@ -65,7 +65,7 @@
             max="2092-11-16"
             required="required"
             />
-          </div>
+          </div> -->
 <!-- TO DO: add boxes to select from-->
           <!-- <div class="form-row">
             <label for="tag" class="label">Tags</label>
