--- a/views/blogs/edit.ejs
+++ b/views/blogs/edit.ejs
@@ -30,7 +30,7 @@
             />
           </div>
   
-          <div class="form-row">
+          <!-- <div class="form-row">
             <label for="startDate" class="label">Started: </label>
             <input
               id="startDate"
@@ -39,7 +39,7 @@
               value="2021-10-15"
               min="1992-11-16"
               max="2092-11-16"
-              value= "<%= blog.startDate %>"
+              value= "<%# blog.startDate %>"
               required="required"
             />
           </div>
@@ -54,7 +54,7 @@
               value="2021-10-15"
               min="1992-11-16"
               max="2092-11-16"
-              value= "<%= blog.endDate %>"
+              value= "<%# blog.endDate %>"
               required="required"
             />
           </div>
@@ -67,7 +67,7 @@
               type="checkbox"
               required="required"
             />
-          </div>
+          </div> -->
 
 
           <div class="form-row">
