--- a/views/categories/editAuthor.ejs
+++ b/views/categories/editAuthor.ejs
@@ -31,7 +31,7 @@
           </div>
 
 
-          <div class="form-row">
+          <!-- <div class="form-row">
             <label for="quotes" class="label">Quotes</label>
             <input
               id="quotes"
@@ -39,7 +39,7 @@
               type="text"
               required="required"
             />
-          </div>
+          </div> -->
 
 
           <div class="form-row">
