updateBlog function now updates author and blog posts in most cases, except when the author name is changed to an author who already exists in the system.

--- a/views/blogs/details.ejs
+++ b/views/blogs/details.ejs
@@ -10,7 +10,7 @@
         <div class="content-box-top">
           <div class="content-box-heading">
             <h1 class="title"><%= blog.bookTitle %></h1>
-            <a class="authorLink" href="/categories/<%= blog.author %>">
+            <a class="authorLink" href="/categories/<%= blog.authorID %>">
               <h2 class="author"><%= blog.author %></h2>
             </a>  
           </div>
