--- a/views/blogs/index.ejs
+++ b/views/blogs/index.ejs
@@ -15,7 +15,7 @@
               <h1 class="title"><%= blogs[i].bookTitle %></h1>
             </a>
             <h3 class="author">by
-              <a class="authorLink" href="/categories/<%= blogs[i].author %>">
+              <a class="authorLink" href="/categories/<%= blogs[i].authorID %>">
                 <%= blogs[i].author %>
               </a>
               </h3>
