--- a/public/contentBox.css
+++ b/public/contentBox.css
@@ -1,4 +1,3 @@
-.form-container,
 .content-box {
   background: #2e2525ff;
   color: #966533ff;
@@ -6,45 +5,118 @@
   padding: 20px;
   margin-top: 20px;
 
-  border: 5px solid #473120ff;
+  border: 3px solid #473120ff;
+  border-radius: 2px;
 }
 
-.form-container {
+form {
   display: flex;
   flex-flow: row wrap;
-  width: 900px;
+
+  background: #65292aff;
+  color: #966533ff;
+
+  margin: 30px 30px 20px 30px;
+  padding: 20px;
+
+  border: 1px solid #473120ff;
 }
 
-.form-container > * {
-  border: 1px solid rgb(255, 255, 255);
-  flex: 0 0 30%;
-}
+/*-----------------------------------------------------------------*/
 
-.col-one {
-  margin: 0px 30px 0px 0px;
-}
-
-.col-two {
-  margin: 0px 0px 5px 90px;
-}
-
-/* .form-row label {
+form .form-row,
+.form-row-full {
   display: flex;
-  flex-direction: column;
-  margin: 5px 5px 5px 0px;
-  padding: 0px 0px;
-}
-.form-row input {
-  display: flex;
-  flex-direction: column;
-  margin: 5px 5px 5px 0px;
-  padding: 0px 0px;
+  justify-content: space-between;
+  /* border: 10px solid rgb(82, 0, 175); */
 }
 
-.form-row textarea {
+.form-row {
+  flex-basis: 50%;
+}
+
+.form-row-full {
+  flex-basis: 100%;
+}
+
+fieldset {
+  display: flex;
+  flex-flow: row wrap;
+  border: none;
+
+  /* border: 10px solid rgb(82, 0, 175); */
+}
+
+fieldset div {
+  flex-basis: 50%;
+
+  /* text-align: center; */
+}
+
+/* fieldset input,
+label {
+} */
+
+legend {
+  flex: 1;
+  width: 100%;
+}
+
+input {
+  margin: 4px 0px 4px 4px;
+  max-height: 24px;
+}
+
+form div:nth-of-type(odd) input {
+  /* border: 10px solid rgb(82, 0, 175); */
+  margin-right: 4px;
+}
+
+form div:nth-of-type(even) label {
+  /* border: 10px solid rgb(82, 0, 175); */
+  margin-left: 4px;
+}
+
+input,
+select,
+textarea,
+button {
+  background: #846545ff;
+  color: #2e2525ff;
+
+  border: 1px solid #2e2525ff;
+  border-radius: 2px;
+}
+
+/* top, right, bottom, left */
+
+label {
+  padding: 8px 20px 0px 0px;
+  margin-bottom: 8px;
+}
+
+textarea {
+  flex: 1;
+
   width: 100%;
   min-height: 200px;
-} */
+}
+
+button {
+  /* content-box padding + form margin */
+  background: #966533ff;
+  margin-left: 50px;
+  padding: 10px 20px;
+  font-size: medium;
+}
+
+/*--------------------Mobile----------------------*/
+
+@media only screen and (max-width: 825px) {
+  form div {
+    flex-basis: 100%;
+  }
+}
 
 /* ------------------------------------ End of form CSS ---------------------------------------*/
 
