update function has been tested and no problems have been observed. some CSS changes to the index page, create page, all authors page, and author details page.

--- a/views/blogs/create.ejs
+++ b/views/blogs/create.ejs
@@ -113,9 +113,7 @@
           <textarea id="blogContent" name="blogContent" ></textarea>
 
         </form>
-
-        <button id="post-new-blog-button">Post!</button>
-      
+        <button form="create-form">Post!</button>
     </div>
 
     </div>
