--- a/public/contentBox.css
+++ b/public/contentBox.css
@@ -120,7 +120,9 @@ button {
 
 /* ------------------------------------ End of form CSS ---------------------------------------*/
 
-.content-box-top {
+/*---------------------------- index page ----------------------*/
+
+/* .content-box-top {
   display: flex;
   justify-content: space-between;
 }
@@ -129,12 +131,11 @@ button {
   display: flex;
   flex-direction: column;
   padding-bottom: 10px;
-  /* border: 1px solid rgb(194, 25, 25); */
 }
 
 .content-box-heading img {
   margin: 20px;
-}
+} */
 
 .thumbnail {
   display: flex;
@@ -145,7 +146,82 @@ button {
   padding-top: 5px;
 }
 
-.blog-snippet {
+.blog-snippet,
+.about-author {
   background: #65292aff;
   border: 2px solid #473120ff;
+  padding: 10px;
+}
+
+.top-container {
+  display: flex;
+  flex-flow: row wrap;
+
+  color: #966533ff;
+  /* border: 3px solid rgb(82, 0, 175); */
+}
+
+.card-col {
+  flex-basis: 50%;
+  /* border: 2px solid rgb(79, 175, 0); */
+}
+
+.card-col-1 {
+  flex: 2;
+}
+
+.card-col-2 {
+  flex: 1;
+}
+
+.card-col-2 {
+  display: flex;
+  justify-content: flex-end;
+  /* border: 2px solid rgb(79, 175, 0); */
+}
+
+.card-line {
+  display: flex;
+  flex-flow: row wrap;
+  flex-basis: 50%;
+  /* border: 2px solid rgb(175, 149, 0); */
+}
+
+.edit img {
+  max-width: 25px;
+  max-height: 25px;
+  margin: 0px 10px;
+}
+
+.card-line-full {
+  margin-top: 20px;
+}
+
+/* top, right, bottom, left */
+
+/* .card-line-full {
+  flex-basis: 100%;
+} */
+
+/*---------------------------- all Authors page ----------------------*/
+
+.author-container {
+  display: flex;
+  justify-content: space-evenly;
+  /* border: 2px solid rgb(175, 149, 0); */
+}
+
+/*---------------------------- Author Details page ----------------------*/
+
+.book-list-title {
+  justify-content: center;
+  display: flex;
+  flex-basis: 100%;
+  /* border: 2px solid rgb(175, 149, 0); */
+}
+
+.book-list {
+  display: flex;
+  justify-content: space-evenly;
+  color: #65292aff;
 }
